# nextgen2026-coding-bootcamp

./: .gitignore  AGENTS.md  CODING_AGENT_RULES.md  LICENCE  README.md  TEMPLATE_README.md  apptainer.def  dockerfile  example.env  pyproject.toml
$tmpdir/results/: analysis_summary.md  high_demand_share_by_hour.csv  high_demand_summary.json  (+2 more)
agents/: SESSION_CONTEXT.md  WORKFLOW_STATUS.md
configs/: base.yaml  paths.yaml  run.yaml
docs/: 00-development-environment.md  00-project-demo.md  00-session-overview.md  01-agent-tasks.md  01-project-brief.md  01-project-initialization.md  01-project-structure.md  01-specification.md  01-windows-wsl-ubuntu.md  02-behavioural-validation.md  02-config.md  02-project-version-control.md  02-repo-workflow-and-missing-piece.md  02-testing-as-verification.md  02-vscode-and-remote-wsl.md  03-ai-agent-workflow.md  03-cli.md  03-implementation-plan.md  03-project-structure.md  03-specification-templates.md  03-toolchain-setup.md  04-context-management.md  04-git-and-repo-setup.md  04-implementation.md  04-observability.md  04-project-dependencies.md  04-validation-review-and-merge-request.md  05-delegation.md  05-review-and-commit.md  05-running-python.md  05-submit-work-for-review.md  05-traceability.md  06-orchestration.md  06-project-source.md  06-refinement.md  06-verification.md  07-git-workflows.md  07-project-scripts.md  07-refinement.md  07-testing.md  (+13 more)
notebooks/: bike-demand-analysis.ipynb  example.ipynb  image-analysis.ipynb  manual_bike_share_analysis.ipynb
scripts/: 00_fetch.py  01_prepare.py  02_analyze.py  03_report.py  run_workflow.py  runtime_demo.py  show_summary.py
tests/: conftest.py  test_analyze_report.py  test_config.py  test_fetch.py  test_fetch_prepare_contract.py  test_integration_stage_handoff.py  test_invariants.py  test_known_answer.py  test_manifests.py  test_prepare.py  test_runtime.py  test_workflow.py  test_workflow_smoke.py
(+31 files in other folders)
