[project]
name = "nextgen2026-coding-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samuel Klett Navarro", email = "samuelklettnavarro@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nextgen2026-coding-bootcamp = "nextgen2026_coding_bootcamp:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
