[project]
name = "nextgen2026-coding-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samuel Klett Navarro", email = "samuelklettnavarro@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
]

[project.scripts]
hello = "nextgen2026_coding_bootcamp.hello:main"
viz = "nextgen2026_coding_bootcamp.viz:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.ruff.format]
preview = true
