[project]
name = "nextgen2026-coding-bootcamp"
version = "0.1.0"
description = "Config-driven, reproducible SMS classification workflow scaffold for the NextGen 2026 coding bootcamp."
readme = "README.md"
authors = [
    { name = "Sam Cantrill", email = "sam.cantrill@data61.csiro.au" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "omegaconf>=2.3.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
experiment = "nextgen2026_coding_bootcamp.workflow_cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
